# mrpt-shivang

./: CMakeLists.txt
apps/marker-slam/: CMakeLists.txt  marker-slam-main.cpp
cmakemodules/: DefineExamples.cmake  script_aruco.cmake
libs/detectors/: CMakeLists.txt
libs/detectors/include/mrpt/: detectors.h
libs/detectors/include/mrpt/detectors/: CDetectableObject.h  CMarkerDetection.h
libs/detectors/src/: CDetectableObject.cpp  CMarkerDetection.cpp  CMarkerDetection_unittest.cpp  registerAllClasses.cpp
parse-files/: config.h.in
samples/markerTest/: MARKER_TEST.INI  test.cpp
share/mrpt/datasets/markers/: CAMERA_PARAM.INI  out.txt
